--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav><a href="https://tdudkowski.github.io/"">to Github Page</a> | <a href=" https://github.com/tdudkowski/Login-Form-With-Validation">repo
+  <nav><a href="https://tdudkowski.github.io/">to Github Page</a> | <a href="https://github.com/tdudkowski/Login-Form-With-Validation">repo
       of Login form</a> </nav> <div class="comment">
       <h1>Login form with validation</h1>
       <h2>Info</h2>
