--- a/index.html
+++ b/index.html
@@ -11,58 +11,58 @@
 
 <body>
   <nav><a href="https://tdudkowski.github.io/">to Github Page</a> | <a href="https://github.com/tdudkowski/Login-Form-With-Validation">repo
-      of Login form</a> </nav> <div class="comment">
-      <h1>Login form with validation</h1>
-      <h2>Info</h2>
-      <ul>
-        <li>Email validation is not ready yet, write any text to go on.</li>
-      </ul>
-      <h2>To-Do</h2>
-      <ul>
-        <li>Email validation</li>
-        <li>Design</li>
-        <li>Draw random order of weekdays</li>
-        <li>Correct some inconsistencies</li>
-      </ul>
-      </div>
+      of Login form</a> </nav>
+  <div class="comment">
+    <h1>Login form with validation</h1>
+    <h2>Info</h2>
+    <ul>
+      <li>Email validation is not ready yet, write any text to go on.</li>
+    </ul>
+    <h2>To-Do</h2>
+    <ul>
+      <li>Design</li>
+      <li>Draw random order of weekdays</li>
+      <li>Correct some inconsistencies</li>
+    </ul>
+  </div>
 
-      <hr>
+  <hr>
 
-      <div class="container">
+  <div class="container">
 
-        <div class="stage1">
-          <p>To get to next stage you should make two things: check this checkbox, and write into textfield correct
-            mail</p>
-          <form action="">
-            <span><label for="">Check it</label>
-              <input type="checkbox" name="checkIt" value="" class="checkbox"></span>
-            <span><label for="">Write here correct mail</label>
-              <input type="text" name="email" class="email"></span>
-            <input type="submit" value="Submit" class="btn1">
-          </form>
-          <!-- <p>1 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore cum, quaerat quod, fuga autem iusto</p>
- <button class="btn1">CLICK</button> -->
-        </div>
+    <div class="stage1">
+      <p>To get to next stage you should make two things: check this checkbox, and write into textfield correct
+        mail</p>
+      <p>Rules of correct formatted mail: 1) there's one and the only one @ sign, both sides are not empty 2) on the
+        right side there's at last one dot, and on the right side of the dot are letters, and only letters</p>
+      <form action="">
+        <span><label for="">Check it</label>
+          <input type="checkbox" name="checkIt" value="" class="checkbox"></span>
+        <span><label for="">Write here correct mail</label>
+          <input type="text" name="email" class="email"></span>
+        <input type="submit" value="Submit" class="btn1">
+      </form>
+    </div>
 
-        <div class="stage2">
-          <p>Please, write the result of this algebraic operation <em class="operation"></em></p>
-          <input type="text" name="result" class="result">
-          <button>CLICK</button>
-        </div>
+    <div class="stage2">
+      <p>Please, write the result of this algebraic operation <em class="operation"></em></p>
+      <input type="text" name="result" class="result">
+      <button>CLICK</button>
+    </div>
 
-        <div class="stage3">
-          <p>Almost the end! Only one task to do now: click square with today's day of the week.</p>
-          <div class="jours"></div>
-        </div>
+    <div class="stage3">
+      <p>Almost the end! Only one task to do now: click square with today's day of the week.</p>
+      <div class="jours"></div>
+    </div>
 
-        <div class="stage4">
-          <p>4 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore cum, quaerat quod, fuga autem iusto</p>
-          <h1>Finished!</h1>
-          <button>CLICK</button>
-        </div>
+    <div class="stage4">
+      <p>4 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore cum, quaerat quod, fuga autem iusto</p>
+      <h1>Finished!</h1>
+      <button>CLICK</button>
+    </div>
 
-      </div>
-      <script src="main.js"></script>
+  </div>
+  <script src="main.js"></script>
 </body>
 
 </html>
