--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Login form with validation</h1>
     <h2>Info</h2>
     <ul>
-      <li>Email validation is not ready yet, write any text to go on.</li>
+      <li>Validation process in a few stages.</li>
     </ul>
     <h2>To-Do</h2>
     <ul>
